--- a/src/Pages/home.css
+++ b/src/Pages/home.css
@@ -29,15 +29,20 @@
     padding: 0 0 9px 0;
   }
   .posterImage{
-    height: 76vh;
+    height: 80vh;
+    object-fit:cover;
    
 
 }
+/* .poster_image{
+  height: 100%;
+} */
 
 .posterImage > img {
     margin: auto;
     display: block;
     width: 100%;
+    height: 100%;
 }
 
 .posterImage__overlay {
@@ -83,7 +88,7 @@
     margin-bottom: 0.25rem;
     display: flex;
     text-align: left;
-    width: 50%;
+    /* width: 50%; */
     flex-wrap: wrap;
 }
 .list{
@@ -123,12 +128,22 @@ font-size: 25px;
 font-weight: 800;
 }
 
-@media (max-width:428px) {
-  .carousel-root{
+@media (max-width:650px) {
+  .posterImage__overlay {
+   padding:20px;
 
-  }
-  .carousel.carousel-slider {
-    
-  }
+}
+.posterImage__description
+{
+  margin-bottom: 50px;
+}
+.posterImage__title {
+  font-weight: 500;
+  font-size: 2rem;
+}
+.posterImage__runtime {
+  font-size: 20px;
+
+}
   
 }
