--- a/src/components/header.css
+++ b/src/components/header.css
@@ -34,7 +34,13 @@ font-weight: 800;
 }
 .nav{
     display: flex; 
-    
+    margin-top: 20px;
 
 }
 
+@media only screen and (max-width: 650px) {
+    .header{
+        flex-direction: column;
+        flex-wrap: nowrap;
+    }
+  }
