--- a/src/components/list.css
+++ b/src/components/list.css
@@ -67,5 +67,11 @@ font-weight: 400;
     }
     
 }
+@media only screen and (max-width: 660px) {
+    .title2 {
+        font-size: 20px;
+        margin:0px 0px 10px 5px
+    }
+  }
 
  
